@@ -63,8 +63,8 @@ public class ParseImageFromJsonResponseTest {
       assertEquals(response.getId(), 2);
       assertEquals(response.getName(), "CentOS 5.2");
       assertEquals(response.getCreated(), dateService.iso8601SecondsDateParse("2010-08-10T12:00:00Z"));
-      assertEquals(response.getProgress(), new Integer(80));
-      assertEquals(response.getServerId(), new Integer(12));
+      assertEquals(response.getProgress(), Integer.valueOf(80));
+      assertEquals(response.getServerId(), Integer.valueOf(12));
       assertEquals(response.getStatus(), ImageStatus.SAVING);
       assertEquals(response.getUpdated(), dateService.iso8601SecondsDateParse(("2010-10-10T12:00:00Z")));
 
