@@ -185,6 +185,6 @@ public class SshjSshClientLiveTest {
       } finally {
          Closeables.closeQuietly(response);
       }
-      assertEquals(response.getExitStatus().get(), new Integer(0));
+      assertEquals(response.getExitStatus().get(), Integer.valueOf(0));
    }
 }
