@@ -83,7 +83,7 @@ public class ProductItemCategory implements Comparable<ProductItemCategory> {
 
    @Override
    public int compareTo(ProductItemCategory arg0) {
-      return new Integer(id).compareTo(arg0.getId());
+      return Integer.valueOf(id).compareTo(arg0.getId());
    }
 
    /**
